# walletconnect-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
examples/: qr.rs  web3.rs
src/: client.rs  crypto.rs  hex.rs  lib.rs  protocol.rs  qr.rs  serialization.rs  transport.rs  uri.rs
src/client/: core.rs  old.rs  options.rs  session.rs  socket.rs  storage.rs
src/crypto/: aead.rs  key.rs
src/protocol/: message.rs  rpc.rs  topic.rs
src/qr/: image.rs  output.rs  print.rs
