[package]
name = "walletconnect"
version = "0.0.1"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlordell/walletconnect-rs"
homepage = "https://github.com/nlordell/walletconnect-rs"
documentation = "https://docs.rs/walletconnect"
keywords = ["web3", "ethereum", "wallet", "connect", "async"]
description = """
WalletConnect client implementation in Rust.
"""

[features]
default = []
qr = ["atty", "qrcode", "termcolor", "terminfo"]
transport = ["web3", "futures/compat"]

[dependencies]
data-encoding = "2.1"
ethereum-types = { version = "0.8", features = ["serialize"] }
futures = "0.3"
jsonrpc-core = "14.0"
lazy_static = "1.4"
log = "0.4"
openssl = "0.10"
rand = "0.7"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
ws = { version = "0.9", features = ["ssl"] }
zeroize = "1.1"

# qr
atty = { version = "0.2", optional = true }
qrcode = { version = "0.11", optional = true }
termcolor = { version = "1.1", optional = true }
terminfo = { version = "0.7", optional = true }

# transport
web3 = { version = "0.10", optional = true }

[dev-dependencies]
env_logger = "0.7"

[[example]]
name = "qr"
required-features = ["qr"]

[[example]]
name = "web3"
required-features = ["qr", "transport"]
