[package]
name = "walletconnect"
version = "0.2.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlordell/walletconnect-rs"
homepage = "https://github.com/nlordell/walletconnect-rs"
documentation = "https://docs.rs/walletconnect"
keywords = ["web3", "ethereum", "wallet", "connect", "async"]
description = """
WalletConnect client implementation in Rust.
"""

[features]
default = []
qr = ["atty", "qrcode", "termcolor", "terminfo"]
transport = ["web3"]

[dependencies]
data-encoding = "2"
ethers-core = "0"
futures = "0.3"
jsonrpc-core = "18"
lazy_static = "1"
log = "0.4"
openssl = "0.10"
parity-ws = { version = "0.11", features = ["ssl"] }
rand = "0.8"
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
zeroize = "1"

# qr
atty = { version = "0.2", optional = true }
qrcode = { version = "0.12", optional = true }
termcolor = { version = "1", optional = true }
terminfo = { version = "0.7", optional = true }

# transport
web3 = { version = "0.18", optional = true }

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "qr"
required-features = ["qr"]

[[example]]
name = "web3"
required-features = ["qr", "transport"]
